tests/ui/sized-hierarchy/incomplete-inference-issue-143992.current_sized_hierarchy.stderr
error[E0308]: mismatched types
  --> $DIR/incomplete-inference-issue-143992.rs:30:28
   |
LL |     let _x = T::Assoc::new(());
   |              ------------- ^^ expected `[u32; 1]`, found `()`
   |              |
   |              arguments to this function are incorrect
   |
note: associated function defined here
  --> $DIR/incomplete-inference-issue-143992.rs:21:8
   |
LL |     fn new(r: R) -> R {
   |        ^^^ ----

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
